@@ -1,5 +1,5 @@
 /*
- * $Id: wgnuplib.h,v 1.52 2011/11/15 22:47:19 markisch Exp $
+ * $Id: wgnuplib.h,v 1.53 2011/11/18 07:48:28 markisch Exp $
  */
 
 /* GNUPLOT - win/wgnuplib.h */
@@ -39,6 +39,9 @@
  *
  *   Russell Lang
  */
+
+#ifndef WGNUPLIB_H
+#define WGNUPLIB_H
 
 #include <windows.h>
 #include "screenbuf.h"
@@ -228,9 +231,6 @@ void WDPROC AboutBox(HWND hwnd, LPSTR str);
  * by the 'Line styles...' dialog, and save to/from wgnuplot.ini). */
 #define WGNUMPENS 15
 
-/* maximum number of plots which can be enabled/disabled via toolbar */
-#define MAXPLOTSHIDE 10
-
 /* maximum number of different colors per palette, used to be hardcoded (256) */
 #define WIN_PAL_COLORS 4096
 
@@ -325,7 +325,8 @@ typedef struct tagGW {
 	BOOL	polyaa;		/* anti-aliasing for polygons ? */
 	BOOL	patternaa;	/* anti-aliasing for polygons ? */
 
-	BOOL	hideplot[MAXPLOTSHIDE];
+	BOOL	*hideplot;
+	unsigned int maxhideplots;
 	BOOL	hidegrid;
 	unsigned int numplots;
 	BOOL	hasgrid;
@@ -410,3 +411,5 @@ void WIN_update_options __PROTO((void));
 
 
 /* ================================== */
+#endif
+
