@@ -1,5 +1,5 @@
 /*
- * $Id: wgraph.c,v 1.143 2011/11/18 07:41:08 markisch Exp $
+ * $Id: wgraph.c,v 1.144 2011/11/18 07:48:28 markisch Exp $
  */
 
 /* GNUPLOT - win/wgraph.c */
@@ -394,6 +394,8 @@ GraphInitStruct(LPGW lpgw)
 		lpgw->fontsize = WINFONTSIZE;
 		lpgw->maxkeyboxes = 0;
 		lpgw->keyboxes = 0;
+		lpgw->maxhideplots = MAXPLOTSHIDE;
+		lpgw->hideplot = (BOOL *) calloc(MAXPLOTSHIDE, sizeof(BOOL));
 		ReadGraphIni(lpgw);
 	}
 }
@@ -1555,7 +1557,14 @@ drawgraph(LPGW lpgw, HDC hdc, LPRECT rect)
 				case TERM_LAYER_BEFORE_PLOT:
 					plotno++;
 					lpgw->numplots = plotno;
-					if (plotno <= MAXPLOTSHIDE)
+					if (plotno >= lpgw->maxhideplots) {
+						int idx;
+						lpgw->maxhideplots += 10;
+						lpgw->hideplot = (BOOL *) realloc(lpgw->hideplot, lpgw->maxhideplots * sizeof(BOOL));
+						for (idx = plotno; idx < lpgw->maxhideplots; idx++)
+							lpgw->hideplot[idx] = FALSE;
+					}
+					if (plotno <= lpgw->maxhideplots)
 						skipplot = lpgw->hideplot[plotno - 1];
 					break;
 				case TERM_LAYER_AFTER_PLOT:
@@ -1755,8 +1764,8 @@ drawgraph(LPGW lpgw, HDC hdc, LPRECT rect)
 			break;
 
 		case W_boxfill: {  /* ULIG */
-			/* NOTE: the x and y passed with this call are the width and
-			 * height of the box, actually. The left corner was stored into
+			/* NOTE: the x and y passed with this call are the coordinates of the
+			 * lower right corner of the box. The upper left corner was stored into
 			 * ppt[0] by a preceding W_move, and the style was set
 			 * by a W_fillstyle call. */
 			POINT p;
@@ -3155,14 +3164,15 @@ WndGraphProc(HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam)
 				int i;
 				int x = GET_X_LPARAM(lParam);
 				int y = GET_Y_LPARAM(lParam) - lpgw->ToolbarHeight;
-				for (i = 0; (i < lpgw->numplots) && (i < lpgw->maxkeyboxes) && (i < MAXPLOTSHIDE); i++) {
+				for (i = 0; (i < lpgw->numplots) && (i < lpgw->maxkeyboxes) && (i < lpgw->maxhideplots); i++) {
 					if ((lpgw->keyboxes[i].left != INT_MAX) &&
 						(x >= lpgw->keyboxes[i].left) &&
 						(x <= lpgw->keyboxes[i].right) &&
 						(y <= lpgw->keyboxes[i].top) &&
 						(y >= lpgw->keyboxes[i].bottom)) {
 						lpgw->hideplot[i] = ! lpgw->hideplot[i];
-						SendMessage(lpgw->hToolbar, TB_CHECKBUTTON, M_HIDEPLOT + i, (LPARAM)lpgw->hideplot[i]);
+						if (i < MAXPLOTSHIDE)
+							SendMessage(lpgw->hToolbar, TB_CHECKBUTTON, M_HIDEPLOT + i, (LPARAM)lpgw->hideplot[i]);
 						GetClientRect(hwnd, &rect);
 						InvalidateRect(hwnd, (LPRECT) &rect, 1);
 						UpdateWindow(hwnd);
@@ -3560,7 +3570,8 @@ WndGraphProc(HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam)
 			/* handle toolbar events  */
 			if ((LOWORD(wParam) >= M_HIDEPLOT) && (LOWORD(wParam) < (M_HIDEPLOT + MAXPLOTSHIDE))) {
 				unsigned button = LOWORD(wParam) - (M_HIDEPLOT);
-				lpgw->hideplot[button] = SendMessage(lpgw->hToolbar, TB_ISBUTTONCHECKED, LOWORD(wParam), (LPARAM)0);
+				if (button < lpgw->maxhideplots)
+					lpgw->hideplot[button] = SendMessage(lpgw->hToolbar, TB_ISBUTTONCHECKED, LOWORD(wParam), (LPARAM)0);
 				GetClientRect(hwnd, &rect);
 				InvalidateRect(hwnd, (LPRECT) &rect, 1);
 				UpdateWindow(hwnd);
@@ -3741,10 +3752,18 @@ WndGraphProc(HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam)
 			}
 			if ((wParam == SIZE_MAXIMIZED) || (wParam == SIZE_RESTORED)) {
 				RECT rect;
-				SendMessage(hwnd,WM_SYSCOMMAND,M_REBUILDTOOLS,0L);
-				GetWindowRect(hwnd,&rect);
-				lpgw->Size.x = rect.right-rect.left;
-				lpgw->Size.y = rect.bottom-rect.top;
+				unsigned width, height;
+				GetWindowRect(hwnd, &rect);
+				width = rect.right - rect.left;
+				height = rect.bottom - rect.top;
+				/* Ignore minimize / de-minize */
+				if ((lpgw->Size.x != width) || (lpgw->Size.y != height)) {
+					lpgw->Size.x = width;
+					lpgw->Size.y = height;
+					GetClientRect(hwnd, &rect);
+					InvalidateRect(hwnd, (LPRECT) &rect, 1);
+					UpdateWindow(hwnd);
+				}
 			}
 			break;
 #ifndef WGP_CONSOLE
@@ -4050,13 +4069,17 @@ UpdateToolbar(LPGW lpgw)
 		lpgw->hidegrid = FALSE;
 		SendMessage(lpgw->hToolbar, TB_CHECKBUTTON, M_HIDEGRID, (LPARAM)FALSE);
 	}
-	for (i = 0; i < MAXPLOTSHIDE; i++) {
+	for (i = 0; i < GPMAX(MAXPLOTSHIDE, lpgw->maxhideplots); i++) {
 		if (i < lpgw->numplots) {
-			SendMessage(lpgw->hToolbar, TB_HIDEBUTTON, M_HIDEPLOT + i, (LPARAM)FALSE);
+			if (i < MAXPLOTSHIDE)
+				SendMessage(lpgw->hToolbar, TB_HIDEBUTTON, M_HIDEPLOT + i, (LPARAM)FALSE);
 		} else {
-			lpgw->hideplot[i] = FALSE;
-			SendMessage(lpgw->hToolbar, TB_HIDEBUTTON, M_HIDEPLOT + i, (LPARAM)TRUE);
-			SendMessage(lpgw->hToolbar, TB_CHECKBUTTON, M_HIDEPLOT + i, (LPARAM)FALSE);
+			if (i < lpgw->maxhideplots)
+				lpgw->hideplot[i] = FALSE;
+			if (i < MAXPLOTSHIDE) {
+				SendMessage(lpgw->hToolbar, TB_HIDEBUTTON, M_HIDEPLOT + i, (LPARAM)TRUE);
+				SendMessage(lpgw->hToolbar, TB_CHECKBUTTON, M_HIDEPLOT + i, (LPARAM)FALSE);
+			}
 		}
 	}
 }
